@@ -2,6 +2,8 @@
 
 Drivers:
 * MUL::Unimorph
+* CS::Pdtc: Unlike in CS::Pdt, the tag 'Cz.*' is for noun-like
+  cardinal numerals, not for interrogative ordinal numerals.
 
 Fixes:
 * FeatureStructure methods is_affirmative() and is_negative() now
